# do.it

./: README.md  meson.build
data/: doit.appdata.xml  doit.desktop
src/: Application  Application.vala
